--- a/css/styles.css
+++ b/css/styles.css
@@ -748,28 +748,39 @@ color: var(--tittle-text-color);
   overflow: hidden;
 }
 .checkbox-icon {
-  position: absolute;
+  /* position: absolute;
   top: 50%;
   left: 13px;
   transform: translateY(-50%);
   display: inline-block;
-  background-size: contain;
-  background-origin: border-box;
   fill: transparent;
   width: 16px;
   height: 15px;
   border: 2px solid var(--tittle-text-color);
   border-radius: 2px;
-  transition: fill var(--transition-param), background-color var(--transition-param), border-color var(--transition-param);
+  transition: fill var(--transition-param), background-color var(--transition-param), border-color var(--transition-param); */
+
+  position: absolute;
+  top: 50%;
+  left: 13px;
+  transform: translateY(-50%);
+  display: inline-block;
+  fill: transparent;
+  border: 2px solid var(--tittle-text-color);
+  border-radius: 2px;
+  transition: fill var(--transition-param), background-color var(--transition-param), border var(--transition-param);
 }
 .checkbox:checked + .checkbox-icon {
   background-color: var(--accent-color);
-  border-color: var(--accent-color);
+  border: none;
+  fill: var(--white-text-color);
+
+  /* background-color: var(--accent-color);
   border: 2px solid var(--accent-color);
   background-image: url("../images/icon-check.svg");
   background-size: contain;
   background-origin: border-box;
-  fill: var(--white-text-color);
+  fill: var(--white-text-color); */
 }
 .checkbox-text {
   font-size: 14px;
