--- a/css/styles.css
+++ b/css/styles.css
@@ -586,13 +586,27 @@ footer .logo {
   flex-basis: calc((100% - 2 * 30px) / 2);
 }
 .footer-button {
-  position: relative;
+  background-color: var(--accent-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: var(--btn-radius);
+  min-height: 50px;
+  min-width: 200px;
+  max-height: 50px;
+  letter-spacing: 0.06em;
+  color: var(--white-text-color);
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+  cursor: pointer;
+  transition: background-color var(--transition-param);
 }
 .icon-send {
-  position: absolute;
-  top: 50%;
-  right: 28px;
-  transform: translateY(-50%);
+  margin-left: 10px;
 }
 .footer-flex {
   display: flex;
@@ -621,28 +635,8 @@ footer .logo {
   color: var(--footer-grey-text);
   background-color: transparent;
 }
-.footer-sub-but {
-  background-color: var(--accent-color);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  display: inline-flex;
-  align-items: center;
-  border: none;
-  border-radius: var(--btn-radius);
-  min-height: 50px;
-  min-width: 200px;
-  max-height: 50px;
-  letter-spacing: 0.06em;
-  color: var(--white-text-color);
-  background: var(--accent-color);
-  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
-  cursor: pointer;
-  transition: background-color var(--transition-param);
-  padding-left: 29px;
-}
-.footer-sub-but:focus,
-.footer-sub-but:hover {
+.footer-button:focus,
+.footer-button:hover {
   background-color: var(--bb-focus);
 }
 .close-button {
