--- a/css/styles.css
+++ b/css/styles.css
@@ -266,6 +266,7 @@ footer .logo {
 }
 .flexbox {
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 .advantages-item {
@@ -666,6 +667,7 @@ footer .logo {
 .form-input {
   display: flex;
   min-width: 100%;
+  min-height: 40px;
   padding: 8px 8px 8px 42px;
   margin-top: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -673,8 +675,8 @@ footer .logo {
   font-family: inherit;
   transition: border-color var(--transition-param), outline-color var(--transition-param);
 }
-.form-input:not(:last-child) {
-  margin-bottom: 30px;
+.form-field {
+  margin-bottom: 10px;
 }
 .form-input:focus,
 .form-input:hover {
@@ -719,7 +721,9 @@ letter-spacing: 0.03em;
 color: var(--tittle-text-color);
 }
 .comment-input {
+  min-height: 120px;
   padding: 12px 16px;
+  resize: none;
 }
 .checkbox-area {
   position: relative;
